# KodaX-Extensions

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
extensions/read_pdf/: HANDOFF.md  PLAN.md  README.md  extension.ts  package.json
extensions/read_pdf/sidecar/: BUILD_OFFLINE.md  main.py  pyproject.toml
extensions/read_pdf/sidecar/read_pdf/: __init__.py  cli.py  models.py  pipeline.py
extensions/read_pdf/sidecar/read_pdf/engines/: README.md  __init__.py  ocr.py  text_layer.py
extensions/read_pdf/src/: activate.ts  format-result.ts  kodax.ts  sidecar-client.ts  tool.ts  types.ts  validate.ts
extensions/read_pdf/tests/: extension.test.ts  format-result.test.ts  sidecar-client.test.ts  validate.test.ts
extensions/read_pdf/tests/fixtures/: mineru.json  needs-ocr.json  text-layer.json
scripts/: build-extension.mjs  build-sidecar.mjs  eval-read-pdf-auto-use.mjs  pack-offline.mjs
